--- a/mobile-login.html
+++ b/mobile-login.html
@@ -16,7 +16,7 @@ li{list-style:none;}
 .box{
     /* text-align:center; */
     /* position:relative; */
-    background: url('img/phoneground.PNG') center center / cover;
+    background: url('img/phoneground.png') center center / cover;
     
     width:375px;
     height:812px;
