--- a/PC-login.html
+++ b/PC-login.html
@@ -16,7 +16,7 @@ a{
     .box{
             width:1920px;
             height:900px;
-            background: url('img/webground1.PNG') center center / cover;
+            background: url('img/webground1.png') center center / cover;
             position:relative;
             }
     .box::before{
